tests/miniJava/neg/000126_mutation.MiniJava
class java { public System.out.println static void Main ( String [ ] java ) { { } } }
